--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "ag-grid-community": "^33.3.2",
+    "ag-grid-react": "^33.3.2",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.9.2",
+    "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "pako": "^2.1.0",
