--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 VITE_REACT_APP_PLATFORM='DEV'
 VITE_REACT_APP_THEME='default'
 VITE_REACT_APP_CLIENT='DNS'
-VITE_REACT_APP_BASE_URL='https://vconnectapi.sapphiretech.co.in/VCServices/'
+VITE_REACT_APP_BASE_URL='http://103.205.142.142:82/NEXTGEN/'
 VITE_REACT_APP_LOGIN_AUTH='Setup/APIAuth/'
 VITE_REACT_APP_API_COMMON='Common/APICOMM/'
 VITE_REACT_APP_MATERIAL='Material/APIMATE/'
