--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.9.2",
     "input-otp": "^1.4.2",
@@ -41,6 +42,7 @@
     "pako": "^2.1.0",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.3",
